Revert "Refactoring"
This reverts commit eba0a85d2f76ac2fca87031e37a8c9d142ef5aba.